plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'application'
}

application {
	mainClass = 'com.project.consumerserver.ConsumerServerApplication'
}

group = 'com.java'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
	maven { url "https://repo.spring.io/release" }
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.boot:spring-boot-dependencies:3.2.5"
	}
}

dependencies {
	implementation project(':common-entity')

	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'mysql:mysql-connector-java:8.0.28'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'

	// Kafka
	implementation 'org.apache.kafka:kafka-clients:3.4.0'
	implementation 'org.springframework.kafka:spring-kafka'
	testImplementation 'org.springframework.kafka:spring-kafka-test'


	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// JSON
	implementation 'org.springframework.boot:spring-boot-starter-json'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.4'
	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.4'
	implementation 'com.fasterxml.jackson.core:jackson-core:2.15.4'
}

tasks.named('test') {
	useJUnitPlatform()
}
